Mobile recipe collapse on first section. Issue #9

--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ main {
 
   legend {
   background-color: #FFA500;
-  width: 20%;
+  width: 22%;
   border-radius: 5px;
   font-family: 'Oswald', sans-serif;
   font-weight: bold;
@@ -85,4 +85,18 @@ fieldset {
 
 #closeButton {
   color: white;
+}
+
+@media (min-width: 768px) {
+  .collapse.dont-collapse-sm {
+    display: block;
+    height: auto !important;
+    visibility: visible;
+  }
+}
+
+.recipeExpand {
+  position: relative;
+  left: 15px;
+  bottom: 30px;
 }
